force-app/main/default/objects/Municipio__c/fields/C_digo_de_municipio__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_municipio__c</fullName>
    <externalId>true</externalId>
    <label>Código de municipio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>