force-app/main/default/objects/Municipio__c/fields/C_digo_de_provincia__c.field-meta.xml
<CustomField>
    <fullName>C_digo_de_provincia__c</fullName>
    <label>Código de provincia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>