force-app/main/default/objects/Municipio__c/fields/Descripcion_Provincia__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Provincia__c</fullName>
    <label>Provincia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MISIONES</fullName>
            </value>
            <value>
                <fullName>ENTRE RIOS</fullName>
            </value>
            <value>
                <fullName>BUENOS AIRES</fullName>
            </value>
            <value>
                <fullName>MENDOZA</fullName>
            </value>
            <value>
                <fullName>FORMOSA</fullName>
            </value>
            <value>
                <fullName>CORRIENTES</fullName>
            </value>
            <value>
                <fullName>CHACO</fullName>
            </value>
            <value>
                <fullName>SAN LUIS</fullName>
            </value>
            <value>
                <fullName>SALTA</fullName>
            </value>
            <value>
                <fullName>SANTA FÉ</fullName>
            </value>
            <value>
                <fullName>JUJUY</fullName>
            </value>
            <value>
                <fullName>SANTIAGO DEL ESTERO</fullName>
            </value>
            <value>
                <fullName>TUCUMÁN</fullName>
            </value>
            <value>
                <fullName>LA PAMPA</fullName>
            </value>
            <value>
                <fullName>CHUBUT</fullName>
            </value>
            <value>
                <fullName>SANTA CRUZ</fullName>
            </value>
            <value>
                <fullName>RIO NEGRO</fullName>
            </value>
            <value>
                <fullName>SAN JUAN</fullName>
            </value>
            <value>
                <fullName>CÓRDOBA</fullName>
            </value>
            <value>
                <fullName>LA RIOJA</fullName>
            </value>
            <value>
                <fullName>CATAMARCA</fullName>
            </value>
            <value>
                <fullName>NEUQUEN</fullName>
            </value>
            <value>
                <fullName>TIERRA DEL FUEGO</fullName>
            </value>
            <value>
                <fullName>CAPITAL FEDERAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>