force-app/main/default/objects/Municipio__c/fields/TAX_TYPE_para_TIERRA_DEL_FUEGO__c.field-meta.xml
<CustomField>
    <fullName>TAX_TYPE_para_TIERRA_DEL_FUEGO__c</fullName>
    <label>TAX TYPE para  TIERRA DEL FUEGO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>