force-app/main/default/objects/Municipio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Descripcion_Provincia__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>